# core-mx-life-bonding-sc

./: .gitignore  Cargo.toml  README.md  coverage.sh  sc-config.toml
.github/workflows/: coverage.yml
interaction/: devnet.snippets.sh  mainnet.snippets.sh
meta/: Cargo.toml
meta/src/: main.rs
proxy/: Cargo.toml
proxy/src/: lib.rs
src/: admin.rs  config.rs  errors.rs  events.rs  lib.rs  life-bonding-sc-proxy.rs  life_bonding_sc_proxy.rs  macros.rs  storage.rs  views.rs
src/contexts/: base.rs  bond_cache.rs  compensation_cache.rs  macros.rs  mod.rs
src/contexts/mappers/: mod.rs  object_to_id_mapper.rs  storage_address.rs
src/proxy_contracts/: mod.rs
test_external_contracts/: core-mx-liveliness-stake.mxsc.json
tests/: bonding_test.rs  mapper_test.rs  unit_test.rs
tests/bonding_state/: bonding_state.rs  mod.rs
tests/endpoints/: admin.rs  bond.rs  claim_refund.rs  deploy_upgrade.rs  mod.rs  proof.rs  public.rs  renew.rs  vault.rs  views.rs  withdraw.rs
wasm/: Cargo.toml
wasm/src/: lib.rs
