[package]
name = "core-mx-life-bonding-sc"
version = "2.0.0"
authors = ["Bucur David - Itheum"]
edition = "2021"
publish = false

[lib]
path = "src/lib.rs"

[dependencies]
 core-mx-liveliness-stake = {git ="https://github.com/Itheum/core-mx-liveliness-stake.git",branch = "main"}

[dependencies.multiversx-sc]
version = "0.51.0"

[dev-dependencies.multiversx-sc-scenario]
version = "0.51.0"

[workspace]
members = [
    ".",
    "meta",
]
