[package]
name = "core-mx-life-bonding-sc"
version = "3.0.0"
authors = ["Bucur David - Itheum"]
edition = "2021"
publish = false

[lib]
path = "src/lib.rs"

[dependencies]
 core-mx-liveliness-stake = {path="/Users/bucurdavid/dev/itheum/core-mx-liveliness-stake"}

[dependencies.multiversx-sc]
version = "0.51.0"


[dev-dependencies.multiversx-sc-scenario]
version = "0.51.0"

[workspace]
members = [
    ".",
    "meta",
]
